--- a/data-fetching/package.json
+++ b/data-fetching/package.json
@@ -7,13 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "serve-json": "json-server --watch db.json --port 3001"
+    "serve-json":"json-server --watch db.json --port 3001"
   },
   "dependencies": {
     "json-server": "^1.0.0-alpha.23",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18",
-    "serve-json": "^1.0.4"
+    "react-dom": "^18"
   }
 }
